Fixed overflow css problem
git-svn-id: http://svn.winnow.peerworks.org/trunk/winnow@3025 f9e11ea3-fe04-0410-b62f-af45e3a9b5a1

--- a/public/stylesheets/winnow.css
+++ b/public/stylesheets/winnow.css
@@ -592,6 +592,7 @@ a.editor_cancel {
 .item .closed .tag_list {
   height: 1.8em;
   margin: 0 2px 0 19%;
+  overflow: hidden;
 }
 
 .item.selected .closed .tag_list {
